ispCP ω 1.0.0 Changelog
~~~~~~~~~~~~~~~~~~~~~~~~~~~~

2008-03-31 Benedikt Heintel
	- CONFIGS:
		* Fixed Partly #1080: active web folders should not be deletable by customer (for main domain)
		* Changed: Config File Structure
	- ENGINE:
		* Fixed #1136: Overwriting fcgi config during update RC3->RC4
		* Fixed #1148: DNS serial is not updated more than once a day when changing sub domains
	- LANGUAGES:
		* Added: Bulgarian
	- TOOLS:
		* Update PHPmyAdmin to version 2.11.5.1

2008-03-29 Jochen Manz
	- DATABASE:
		* Fixed #1147: database.sql rev 1087 contaminated with ^M

2008-03-28 Christian Hernmarck
	- SETUP:
		* Fixed: if hostname is not qualified, get it again with 'hostname -f'

2008-03-27 Jochen Manz
	- DATABASE:
		* Fixed #1139: order settings only for one reseller, again
	- CONFIGS:
		* Updated all postfix main.cnf corresponding to the debian postfix main.cnf
		* Cleaned up every database.sql

2008-03-27 Benedikt Heintel
	- DATABASE:
		* Fixed #1139: order settings only for one reseller

2008-03-26 Benedikt Heintel
	- CONFIGS:
		* Fixed #1128: fastcgi idle timeout
	- DOCU:
		* Fixed #869: SUGGESTION: check if mysqld is running before starting installer
	- GUI:
		* Fixed #1135: php and cgi options in the hosting plans

2008-03-25 Benedikt Heintel
	- ENGINE:
		* Fixed #1133: Error adding Domains r1078

2008-03-24 Benedikt Heintel
	- GUI:
		* Fixed: safe mode restriction in vfs.php
		* Fixed #1132: Hardcoded theme image paths

2008-03-23 Benedikt Heintel
	- GUI:
		* Fixed: Warnings and Notices if no Database found or no conection to it
		* Fixed: Reformated SSL switch
		* Fixed: Error in Circular Mail if no user set
	- ENGINE:
		* Fixed #836: Static awstats in user's language
	- DISTS:
		* Fixed: (OpenSuse) proftpd.conf not working out of box

2008-03-22 Benedikt Heintel
	- GUI:
		* Fixed: Error in input check and IP management
	- DISTS:
		* Fixed #1130: (FreeBSD) Fix program path in freebsd distro

2008-03-22 Christian Hernmarck
	- DISTS: