@@ -18,7 +18,7 @@
  *   http://opensource.org | osi@opensource.org
  */
 
-function system_message($msg) {
+function system_message($msg, $backButtonDestination = "") {
 	global $cfg;
 
 	if (isset($_SESSION['user_theme'])) {
@@ -27,6 +27,10 @@ function system_message($msg) {
 		$theme_color = $cfg['USER_INITIAL_THEME'];
 	}
 
+	if (empty($backButtonDestination)) {
+		$backButtonDestination = "javascript:history.go(-1)";
+	}
+	
 	$tpl = new pTemplate();
 
     // If we are on the login page, path will be like this
@@ -36,26 +40,26 @@ function system_message($msg) {
         // But if we're inside the panel it will be like this
         $template = '../'.$cfg['LOGIN_TEMPLATE_PATH'].'/system-message.tpl';
     }
+	
     if (!is_file($template)) {
         // And if we don't find the template, we'll just die displaying error message
         die($msg);
     }
+	
 	$tpl->define('page', $template);
-	$tpl->assign(
-					array(
-						'TR_SYSTEM_MESSAGE_PAGE_TITLE' => tr('ispCP Error'),
-						'THEME_COLOR_PATH' => "/themes/$theme_color",
-						'THEME_CHARSET' => tr('encoding'),
-						'TR_BACK' => tr('Back'),
-						'TR_ERROR_MESSAGE' => tr('Error Message'),
-						'MESSAGE' => $msg
-						)
-					);
+	$tpl->assign(array(
+		'TR_SYSTEM_MESSAGE_PAGE_TITLE'	=> tr('ispCP Error'),
+		'THEME_COLOR_PATH'				=> "/themes/$theme_color",
+		'THEME_CHARSET'					=> tr('encoding'),
+		'TR_BACK'						=> tr('Back'),
+		'TR_ERROR_MESSAGE'				=> tr('Error Message'),
+		'MESSAGE'						=> $msg,
+		'BACKBUTTONDESTINATION'			=> $backButtonDestination
+	));
 
 	$tpl->parse('PAGE', 'page');
 	$tpl->prnt();
 
-	exit(0);
+	die();
 }
-
 ?>
